[project]
name = "streamlit-sample"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "x4066x", email = "x4066x@gmail.com" }
]
dependencies = [
    "streamlit>=1.36.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/streamlit_sample"]
